--- a/my-task/post-bai-viet/daily-tasks.mdx
+++ b/my-task/post-bai-viet/daily-tasks.mdx
@@ -2,7 +2,7 @@
 sidebar_position: 1
 ---
 import React from 'react';
-import TaskItem from './TaskItem'; // Đảm bảo đường dẫn đúng
+import TaskItem from '@site/src/components/TaskItem'; // Đảm bảo đường dẫn đúng
 
 # Daily Tasks
 
